# MaidCode

./: .gitignore  Cargo.toml  README.md  registry.json  stats.html
.github/: FUNDING.yml
.github/workflows/: macos_build.yml
.zed/: tasks.json
src/: lib.rs  main.rs
src/errors/: mod.rs  standard_error.rs
src/interpreting/: context.rs  interpreter.rs  mod.rs  runtime_result.rs  symbol_table.rs
src/lexing/: lexer.rs  mod.rs  position.rs  token.rs  token_type.rs
src/nodes/: ast_node.rs  binary_operator_node.rs  break_node.rs  call_node.rs  const_assign_node.rs  continue_node.rs  for_node.rs  function_definition_node.rs  if_node.rs  import_node.rs  list_node.rs  mod.rs  number_node.rs  return_node.rs  string_node.rs  try_except_node.rs  unary_operator_node.rs  variable_access_node.rs  variable_assign_node.rs  while_node.rs
src/package_manager/: logs.rs  mod.rs  packages.rs  paths.rs
src/parsing/: mod.rs  parse_result.rs  parser.rs
src/syntax/: attributes.rs
src/values/: built_in_function.rs  function.rs  list.rs  mod.rs  number.rs  string.rs  value.rs
