[package]
name = "maid"
repository = "https://github.com/xqyet/MaidCode.git"
description = "The MaidCode Programming Language"
authors = ["xqyet"]
version = "0.0.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simply_colored = "0.1.0"
zip = "4.3.0"
toml = "0.9.2"
stringcase = "0.4.0"

[features]
default = []
benchmark = []
