[package]
name = "maid-lang"
repository = "https://github.com/xqyet/MaidCode.git"
description = "Maid Programming Language"
authors = ["xqyet"]
version = "1.0.6"
edition = "2021"
license = "MIT"

include = [
    "src/**",
    "library/**",
    "kennels/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simply_colored = "0.1.0"
zip = { version = "4.3.0", default-features = false }
toml = "0.9.2"
stringcase = "0.4.0"
include_dir = "0.7"
dirs = "5"

[features]
default = []
benchmark = []

[[bin]]
name = "maid"
path = "src/main.rs"

